--- a/ETL_create_database.ipynb
+++ b/ETL_create_database.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
     "    \n",
     "    # Database engine connection\n",
     "    # \"postgres://[user]:[password]@[location]:[port]/[database]\"\n",
-    "    db_string = f\"postgres://postgres:{db_password}@127.0.0.1:5432/movie_data\"\n",
+    "    db_string = f\"postgresql://postgres:{db_password}@127.0.0.1:5432/movie_data\"\n",
     "    # Create the database engine\n",
     "    engine = create_engine(db_string)\n",
     "    # Save movie_df to SQL table\n",
@@ -317,23 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 10. Create the path to your file directory and variables for the three files.\n",
-    "file_dir = 'C://Users/Francis/Movies ETL'\n",
-    "# The Wikipedia data\n",
-    "wiki_file = f'{file_dir}/wikipedia.movies.json'\n",
-    "# The Kaggle metadata\n",
-    "kaggle_file = f'{file_dir}/movies_metadata.csv'\n",
-    "# The MovieLens rating data.\n",
-    "ratings_file = f'{file_dir}/ratings.csv'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -345,13 +329,6 @@
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "D:\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\frame.py:4913: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  errors=errors,\n",
-      "D:\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\strings\\object_array.py:156: FutureWarning: Possible set difference at position 6\n",
-      "  pat = re.compile(pat, flags=flags)\n",
       "D:\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:93: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "D:\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:96: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -368,6 +345,39 @@
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "importing rows 0 to 1000000...Done. 18.774246215820312 total seconds elapsed\n",
+      "importing rows 1000000 to 2000000...Done. 34.93947505950928 total seconds elapsed\n",
+      "importing rows 2000000 to 3000000...Done. 51.449949502944946 total seconds elapsed\n",
+      "importing rows 3000000 to 4000000...Done. 68.01789569854736 total seconds elapsed\n",
+      "importing rows 4000000 to 5000000...Done. 84.27017664909363 total seconds elapsed\n",
+      "importing rows 5000000 to 6000000...Done. 100.62980508804321 total seconds elapsed\n",
+      "importing rows 6000000 to 7000000...Done. 117.15200090408325 total seconds elapsed\n",
+      "importing rows 7000000 to 8000000...Done. 133.299786567688 total seconds elapsed\n",
+      "importing rows 8000000 to 9000000...Done. 150.04524755477905 total seconds elapsed\n",
+      "importing rows 9000000 to 10000000...Done. 166.2009997367859 total seconds elapsed\n",
+      "importing rows 10000000 to 11000000...Done. 182.87552404403687 total seconds elapsed\n",
+      "importing rows 11000000 to 12000000...Done. 199.09172701835632 total seconds elapsed\n",
+      "importing rows 12000000 to 13000000...Done. 215.3990032672882 total seconds elapsed\n",
+      "importing rows 13000000 to 14000000...Done. 232.10667848587036 total seconds elapsed\n",
+      "importing rows 14000000 to 15000000...Done. 248.23793268203735 total seconds elapsed\n",
+      "importing rows 15000000 to 16000000...Done. 264.60367703437805 total seconds elapsed\n",
+      "importing rows 16000000 to 17000000...Done. 281.2576720714569 total seconds elapsed\n",
+      "importing rows 17000000 to 18000000...Done. 297.3153624534607 total seconds elapsed\n",
+      "importing rows 18000000 to 19000000...Done. 313.94946932792664 total seconds elapsed\n",
+      "importing rows 19000000 to 20000000...Done. 330.12623405456543 total seconds elapsed\n",
+      "importing rows 20000000 to 21000000...Done. 346.55500745773315 total seconds elapsed\n",
+      "importing rows 21000000 to 22000000...Done. 363.189453125 total seconds elapsed\n",
+      "importing rows 22000000 to 23000000...Done. 379.2073345184326 total seconds elapsed\n",
+      "importing rows 23000000 to 24000000...Done. 395.53011298179626 total seconds elapsed\n",
+      "importing rows 24000000 to 25000000...Done. 412.3077440261841 total seconds elapsed\n",
+      "importing rows 25000000 to 26000000...Done. 428.42647218704224 total seconds elapsed\n",
+      "importing rows 26000000 to 26024289...Done. 428.797150850296 total seconds elapsed\n"
      ]
     }
    ],
